@@ -1,3 +1,7 @@
+2004-04-20  Douglas Bates  <bates@stat.wisc.edu>
+
+	* src/Makefile.win ($(SHLIB)): Modifications per Uwe Ligges.
+
 2004-04-19  Douglas Bates  <bates@stat.wisc.edu>
 
 	* src/ssclme.c (ssclme_update_mm): fix logic error in
